--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
+
 <body>
     <h1 class="header">A Friendly Game of Hangman!</h1>
+        <h3>Press Any Key To Get Started.</h3>
+        <h6 class="wins-display">Wins: 0</h6>
+        <h6 class="word-display"></h6>
+        <h6 class="guesses-left">Guesses Remaining: 12</h6>
+        <h6 class="guesses-display">Guessed Letters: </h6>
+
+
+
 
 
     <!--Link to Javascript -->
-    <script src="assets/javascript/game.js"></script>
-
+    <script src="assets/javascript/game.js" defer ></script>
 </body>
+
 </html>
