WIP - JavaScript Continues

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <h1 class="header">A Friendly Game of Hangman!</h1>
         <h3>Press Any Key To Get Started.</h3>
-        <h6 class="wins-display">Wins: 0</h6>
-        <h6 class="word-display"></h6>
-        <h6 class="guesses-left">Guesses Remaining: 12</h6>
-        <h6 class="guesses-display">Guessed Letters: </h6>
+        <h6 id="wins-display">Wins: 0</h6>
+        <h6 id="word-display"></h6>
+        <h6 id="guesses-left">Guesses Remaining: 12</h6>
+        <h6 id="guesses-display">Guessed Letters: </h6>
 
 
 
