WIP: Dear Javascript... stopit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
     <!--Link to Javascript -->
-    <script src="assets/javascript/game.js" defer ></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
