--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 
     <!-- Link to Bootstrap CSS Stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <!-- Link to Font Awesome Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 <body>
     <h1 class="header">A Friendly Game of Hangman!</h1>
-        <h3>Press Any Key To Get Started.</h3>
+    <button type="button" class="btn btn-dark"><i class="fas fa-feather-alt"> Let's Play!</i></button>
         <h6 id="wins-display">Wins: 0</h6>
         <h6 id="word-display"></h6>
         <h6 id="guesses-left">Guesses Remaining: 12</h6>
