--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Animal Kingdom</title>
-
+    <!--Link to Reset CSS-->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--Link to CSS Stylesheet-->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
