--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Animal Kingdom</title>
+    <title>Animal Kingdom | Dalton Ricker</title>
     <!--Link to Reset CSS-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <!--Link to CSS Stylesheet-->
